Mostrar ventas en p-dialog

--- a/src/app/features/Ventas/ventas/ventas.component.html
+++ b/src/app/features/Ventas/ventas/ventas.component.html
@@ -1,1 +1,4 @@
-<p>ventas works!</p>
+<app-table
+[dataSource]="Ventas"
+[displayedColumns]="displayedColumns"
+[columnHeaders]="columnHeaders"></app-table>
