--- a/src/app/features/Compartido/Tabla/table/table.component.html
+++ b/src/app/features/Compartido/Tabla/table/table.component.html
@@ -1,13 +1,37 @@
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 w-full">
+
   <ng-container *ngFor="let column of displayedColumns" [matColumnDef]="column">
+
     <th mat-header-cell *matHeaderCellDef>
-        {{ columnHeaders[column] || column | titlecase }}
+      {{ columnHeaders[column] || (column | titlecase) }}
     </th>
-    <td mat-cell *matCellDef="let element">
-        {{ element[column] }}
+
+    <td mat-cell 
+        *matCellDef="let element"
+        (click)="verDetalle(element)"
+        class="fila-click">
+      {{ getNestedValue(element, column) }}
     </td>
-    </ng-container>
+
+  </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+
 </table>
+
+<p-dialog 
+  [(visible)]="dialogVisible"
+  header="Detalle"
+  [modal]="true"
+  [style]="{ width: '400px', background: '#ffffff' }">
+
+  <ng-container *ngIf="selectedRow">
+    <p *ngFor="let col of displayedColumns">
+      <strong>{{ columnHeaders[col] || col }}:</strong>
+      {{ getNestedValue(selectedRow, col) }}
+    </p>
+  </ng-container>
+
+</p-dialog>
+
