--- a/src/app/features/Compartido/Tabla/table/table.component.html
+++ b/src/app/features/Compartido/Tabla/table/table.component.html
@@ -1,37 +1,68 @@
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8 w-full">
+<table mat-table [dataSource]="dataSource" class="mat-elevation-z8 w-full tabla-pastel">
 
   <ng-container *ngFor="let column of displayedColumns" [matColumnDef]="column">
 
-    <th mat-header-cell *matHeaderCellDef>
+    <th mat-header-cell *matHeaderCellDef class="header-pastel">
       {{ columnHeaders[column] || (column | titlecase) }}
     </th>
 
     <td mat-cell 
         *matCellDef="let element"
         (click)="verDetalle(element)"
-        class="fila-click">
+        class="celda-pastel">
       {{ getNestedValue(element, column) }}
     </td>
 
   </ng-container>
 
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+  <tr mat-header-row *matHeaderRowDef="displayedColumns" class="fila-header"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns" class="fila-data"></tr>
 
 </table>
 
-<p-dialog 
+
+<p-dialog
   [(visible)]="dialogVisible"
-  header="Detalle"
   [modal]="true"
-  [style]="{ width: '400px', background: '#ffffff' }">
+  [dismissableMask]="true"
+  header=""
+  [style]="{ width: '600px', background: '#FFFDEA' }"
+  styleClass="rounded-3xl shadow-3 pastel-modal">
 
   <ng-container *ngIf="selectedRow">
-    <p *ngFor="let col of displayedColumns">
-      <strong>{{ columnHeaders[col] || col }}:</strong>
-      {{ getNestedValue(selectedRow, col) }}
-    </p>
+
+    <!-- HEADER -->
+    <div class="p-4 pb-1 text-center">
+      <h2 class="m-0 text-2xl font-bold text-[#FF7D59]">
+        Detalles del Registro
+      </h2>
+      <p class="mt-1 text-sm text-[#9980ED]">
+        Información seleccionada
+      </p>
+    </div>
+
+    <!-- FORM VERTICAL -->
+    <div class="p-6 flex flex-col gap-5">
+
+      <div *ngFor="let col of displayedColumns" class="flex flex-col gap-2">
+
+        <!-- LABEL -->
+        <label class="text-sm font-semibold text-[#2C2C34] uppercase tracking-wide">
+          {{ columnHeaders[col] || col }}
+        </label>
+
+        <!-- CAMPO -->
+        <input 
+          type="text"
+          class="p-3 rounded-xl border border-[#FADDD8] bg-white text-[#2C2C34] shadow-sm"
+          [value]="getNestedValue(selectedRow, col)"
+          readonly
+        />
+
+      </div>
+
+    </div>
+
   </ng-container>
 
 </p-dialog>
-
