--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,7 @@
     <ul class="space-y-3">
 
     <li>
-        <a routerLink="/dashboards"
+        <a routerLink="/dashboard"
         routerLinkActive="active-link"
         class="block p-3 rounded-2xl font-medium text-[#2C2C34] hover:bg-[#FFE5E0] transition">
         Dashboards
