--- a/src/app/features/productos/pages/productosMain/productos-main/productos-main.component.html
+++ b/src/app/features/productos/pages/productosMain/productos-main/productos-main.component.html
@@ -1,7 +1,7 @@
 <div class="flex items-center justify-between mb-6">
     <h1 class="text-3xl font-bold text-gray-800">Listado de Productos</h1>
 
-    <button class="bg-green-300 hover:bg-green-400 transition rounded-3xl p-3 text-xl" (click)="agregarProducto()">
+    <button class="bg-pink-300 hover:bg-pink-400 transition rounded-3xl p-3 text-xl" (click)="agregarProducto()">
         Nuevo Producto
     </button>
 </div>
