--- a/src/app/features/Compartido/Carrusel/carrusel/carrusel.component.html
+++ b/src/app/features/Compartido/Carrusel/carrusel/carrusel.component.html
@@ -10,8 +10,8 @@
 
   <ng-template pTemplate="item" let-product>
     
-    <div class="rounded-3xl h-[500px] p-4 shadow-md bg-[#FFFDEA] border border-[#FADDD8] 
-                flex flex-col items-center text-center transition-all duration-200 hover:shadow-xl">
+    <div class="rounded-3xl h-[500px] p-4
+                flex flex-col items-center text-center transition-all duration-200 hover:bg-pink-100">
 
       <img
         [src]="'img/' + product.id + '.jpg'"
@@ -21,7 +21,7 @@
         height="180"
       />
 
-      <h3 class="mt-3 text-xl font-semibold text-[#FF7D59]">
+      <h3 class="mt-3 text-xl font-semibold text-pink-600">
         {{ product.nombre }}
       </h3>
 
@@ -29,26 +29,11 @@
         Precio: ${{ product.precio }}
       </p>
 
-      <p class="text-xs text-[#9980ED] font-medium mt-2">
+      <p class="text-xs text-pink-600 font-medium mt-2">
         Stock disponible: {{ product.stock }}
       </p>
 
       <div class="mt-4 w-full flex flex-col gap-2">
-
-        <button
-          pButton
-          icon="pi pi-search"
-          label="Ver detalle"
-          class="p-button-sm w-full 
-                 bg-[#FFE5E0] text-[#2C2C34] border border-[#FFBDE8] rounded-xl"
-        ></button>
-
-        <button
-          pButton
-          label="Comprar"
-          class="w-full p-button-sm bg-[#FF7D59] text-white font-semibold rounded-xl border-0"
-        ></button>
-
       </div>
 
     </div>
