--- a/src/app/features/DashBoard/dash-board/dash-board.component.html
+++ b/src/app/features/DashBoard/dash-board/dash-board.component.html
@@ -1,5 +1,35 @@
-<div class="flex gap-6 w-full justify-center items-start">
+<div class="flex gap-6 justify-center mb-6">
 
+  <mat-form-field class="w-48">
+    <mat-label>Fecha desde</mat-label>
+    <input 
+      matInput 
+      [matDatepicker]="pickerDesde"
+      [(ngModel)]="FechaDesde">
+    <mat-datepicker-toggle matSuffix [for]="pickerDesde"></mat-datepicker-toggle>
+    <mat-datepicker #pickerDesde></mat-datepicker>
+  </mat-form-field>
+
+  <mat-form-field class="w-48">
+    <mat-label>Fecha hasta</mat-label>
+    <input 
+      matInput 
+      [matDatepicker]="pickerHasta"
+      [(ngModel)]="FechaHasta">
+    <mat-datepicker-toggle matSuffix [for]="pickerHasta"></mat-datepicker-toggle>
+    <mat-datepicker #pickerHasta></mat-datepicker>
+  </mat-form-field>
+
+  <button 
+    (click)="AplicarFiltro()"
+    class=" bg-pink-100 text-pink-600 rounded-xl hover:bg-pink-300 h-[55px] w-48 border border-pink-300">
+    Filtrar
+  </button>
+
+</div>
+
+
+<div class="flex gap-6 w-full justify-center items-start mt-7">
   <div class="bg-white shadow rounded-2xl p-4 w-1/2 h-[380px]">
     <app-barchart 
       [variables]="labels"
@@ -8,20 +38,17 @@
     </app-barchart>
   </div>
 
-  <div class="bg-white shadow rounded-2xl p-4 w-1/2 h-[380px] max-w-[300px]">
+  <div class="bg-white shadow rounded-2xl p-4 w-1/2 h-[380px] max-w-[300px] ">
     <app-piechart 
       [data]="labels"
       [amount]="values"
       class="w-full h-full">
     </app-piechart>
   </div>
-
-
-
 </div>
 
 <div class="w-full flex justify-center mt-6">
   <div class="bg-white shadow rounded-2xl w-[800px] h-[450px] p-6 flex justify-center items-center">
-    <app-linechart class="w-full h-full"></app-linechart>
+    <app-linechart class="w-full h-full" [labels]="lineLabels" [data]="lineDatasets"></app-linechart>
   </div>
 </div>
